Crash dragging on multiple buttons in the clip editor markers panel #83651

Closed
opened 2020-12-11 05:17:06 +01:00 by Hans Goudey · 9 comments
Member

System Information
Operating system: Linux-5.9.8-100.fc32.x86_64-x86_64-with-fedora-32-Thirty_Two 64 Bits
Graphics card: GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 455.45.01

Blender Version
Broken: version: 2.92.0 Alpha, branch: Unknown, commit date: Unknown Unknown, hash: rBUnknown
Worked: 2.90 (I haven't bisected yet)

Short description of error
Dragging down and moving the values of multiple buttons doesn't work in the side-panel of the clip editor

image.png

Exact steps for others to reproduce the error

  • New VFX template file
  • Open any image file
  • ctrl-click to add some markers
  • Go to the "Markers" panel in the "Track" category
  • Drag the "width" and "height" buttons at the same time
ui_multibut_states_apply: Can't find button
/home/hans/Documents/Blender-Git/blender/source/blender/editors/interface/interface_handlers.c:1369:40: runtime error: member access within null pointer of type 'struct uiButMultiState'
**System Information** Operating system: Linux-5.9.8-100.fc32.x86_64-x86_64-with-fedora-32-Thirty_Two 64 Bits Graphics card: GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 455.45.01 **Blender Version** Broken: version: 2.92.0 Alpha, branch: Unknown, commit date: Unknown Unknown, hash: `rBUnknown` Worked: 2.90 (I haven't bisected yet) **Short description of error** Dragging down and moving the values of multiple buttons doesn't work in the side-panel of the clip editor ![image.png](https://archive.blender.org/developer/F9502174/image.png) **Exact steps for others to reproduce the error** - New VFX template file - Open any image file - ctrl-click to add some markers - Go to the "Markers" panel in the "Track" category - Drag the "width" and "height" buttons at the same time ``` ui_multibut_states_apply: Can't find button /home/hans/Documents/Blender-Git/blender/source/blender/editors/interface/interface_handlers.c:1369:40: runtime error: member access within null pointer of type 'struct uiButMultiState' ```
Author
Member

Added subscriber: @HooglyBoogly

Added subscriber: @HooglyBoogly
Author
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Added subscriber: @Blendify

Added subscriber: @Blendify

Added subscriber: @ideasman42

Added subscriber: @ideasman42

Committed workaround for the crash, the error with multi-button sliding still needs to be fixed though.

Committed workaround for the crash, the error with multi-button sliding still needs to be fixed though.
Author
Member

I think it's fair to call this a bug. Now that the crash is solved it's probably low priority though. One idea to solve this is to have some more persistent storage of button handle data on the panel level. The fact that it's reallocated on every redraw is what causes this bug.

I think it's fair to call this a bug. Now that the crash is solved it's probably low priority though. One idea to solve this is to have some more persistent storage of button handle data on the panel level. The fact that it's reallocated on every redraw is what causes this bug.
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

We've a report for the multi-button editing of clip-editor: #67027 (Multiple numerical values are not changing together in Motion tracking workspace)
Campbell has fixed the crash already so I think we can merge this report.

We've a report for the multi-button editing of clip-editor: #67027 (Multiple numerical values are not changing together in Motion tracking workspace) Campbell has fixed the crash already so I think we can merge this report.
Member

Closed as duplicate of #67027

Closed as duplicate of #67027
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#83651
No description provided.