Workaround T83651: Crash dragging multiple buttons in the clip editor

Avoid the crash, dragging multiple buttons still needs fixing.